- New mdbapply function to automatically create and run embedded R functions in MonetDB
- Fixes for dplyr backend (Thanks, Anthony)
- Fix for case when query only returns a prompt (CALL ..., Thanks, Roman)
- Fix for empty result set on dbGetQuery(), no longer returning NULL (Thanks, Fabian)
- Fix for dbConnect(), it ignored the url parameter somehow, which broke some sqlsurvey (Thanks, Anthony)
- Added lower.case.names= to monet.read.csv() in case users want to avoid quoting

0.9.7
- Fixed crash on Windows (Sorry, everyone)

0.9.6
- monetdb.read.csv new create= parameter (Thanks, Duncan)
- deprecated nrows parameter to monetdb.read.csv, not neccessary any more because of changes to MonetDB
- Fixed non-ASCII character handling (Thanks, Roman)
- Fully removed C-based socket code
- support for dplyr verbs sample_n() and sample_frac()

0.9.5
- Removed package date (Thanks, Dimitar)
- Added sys. schema name to internal queries, so SET SCHEMA xx would not break things (Thanks again, Dimitar)
- Fixed monetdb:// URL handling on newer R versions (Thanks, Alex)
- DBI 0.3 compatibility (isValid etc.)
- deprecated dbTransaction() (DBI has standardized dbBegin())
- Back to R socket code for peace of mind
- Code cleanup
- dplyr integration moved to MonetDB.R package

0.9.4
- dbWriteTable overhaul (thanks, Anthony)
- Fix for dbListTables for MonetDB versions after Jan2014

0.9.3
- Remove trailing slashes for monetdb.program.path parameter for monetdb.server.setup (Thanks, Anthony!)
- fixed monetdbd.liststatus (Thanks, Bart)

0.9.2
- monetdb_queryinfo method to find out things about an arbitrary query cheaply
- new options monetdb.sequential, monetdb.debug.query and monetdb.debug.mapi
- debug output now uses the message() function
- source code cleanup
- dbListTables() now hides system tables per default, also got options to include the
  schema name and quoting in the result (sys_tables, schema_names and quote)
- fixed various TODO's in the code to get closer to 1.0 (exciting)