@@ -103,7 +103,7 @@ setMethod("dbConnect", "MonetDBDriver", def=function(drv, dbname="demo", user="m
         break
       }, error = function(e) {
         if ("connection" %in% class(socket)) {
-          close(socket)
+          tryCatch(close(socket), error=function(e){}) 
         }
         message("Server not ready(", e$message, "), retrying (ESC or CTRL+C to abort)")
         Sys.sleep(1)
@@ -283,8 +283,6 @@ setMethod("dbSendQuery", signature(conn="MonetDBConnection", statement="characte
   invisible(new("MonetDBResult", env=env))
   })
 
-
-
 # quoting
 quoteIfNeeded <- function(conn, x, ...) {
   chars <- !grepl("^[a-z][a-z0-9_]*$", x, perl=T) & !grepl("^\"[^\"]*\"$", x, perl=T)
@@ -315,7 +313,7 @@ setMethod("dbWriteTable", "MonetDBConnection", def=function(conn, name, value, o
     if (!is.data.frame(value)) value <- as.data.frame(value)
   }
   if (overwrite && append) {
-    stop("Setting both overwrite and append to true makes no sense.")
+    stop("Setting both overwrite and append to TRUE makes no sense.")
   }
 
   qname <- quoteIfNeeded(conn, name)
@@ -622,7 +620,8 @@ setMethod("dbGetInfo", "MonetDBResult", def=function(dbObj, ...) {
 # adapted from RMonetDB, no java-specific things in here...
 monet.read.csv <- monetdb.read.csv <- function(conn, files, tablename, nrows=NA, header=TRUE, 
                                                locked=FALSE, na.strings="", nrow.check=500, 
-                                               delim=",", newline="\\n", quote="\"", create=TRUE, lower.case.names=FALSE, ...){
+                                               delim=",", newline="\\n", quote="\"", create=TRUE, 
+                                               col.names=NULL, lower.case.names=FALSE, ...){
   
   if (length(na.strings)>1) stop("na.strings must be of length 1")
   headers <- lapply(files, utils::read.csv, sep=delim, na.strings=na.strings, quote=quote, nrows=nrow.check, 
@@ -631,7 +630,7 @@ monet.read.csv <- monetdb.read.csv <- function(conn, files, tablename, nrows=NA,
   if (!missing(nrows)) {
     warning("monetdb.read.csv(): nrows parameter is not neccessary any more and deprecated.")
   }
-  
+
   if (length(files)>1){
     nn <- sapply(headers, ncol)
     if (!all(nn==nn[1])) stop("Files have different numbers of columns")
@@ -642,9 +641,19 @@ monet.read.csv <- monetdb.read.csv <- function(conn, files, tablename, nrows=NA,
   } 
   
   if (create){
-    if(lower.case.names) names(headers[[1]]) <- tolower(names( headers[[1]]))
+    if(lower.case.names) names(headers[[1]]) <- tolower(names(headers[[1]]))
+    if(!is.null(col.names)) {
+      if (lower.case.names) {
+        warning("Ignoring lower.case.names parameter as overriding col.names are supplied.")
+      }
+      col.names <- as.character(col.names)
+      if (length(unique(col.names)) != length(names(headers[[1]]))) {
+        stop("You supplied ", length(unique(col.names)), " unique column names, but file has ", 
+          length(names(headers[[1]])), " columns.")
+      }
+      names(headers[[1]]) <- quoteIfNeeded(conn, col.names)
+    }
     dbWriteTable(conn, tablename, headers[[1]][FALSE, ])
-
   }
   
   delimspec <- paste0("USING DELIMITERS '", delim, "','", newline, "','", quote, "'")
@@ -663,6 +672,6 @@ monet.read.csv <- monetdb.read.csv <- function(conn, files, tablename, nrows=NA,
         delimspec, "NULL as ", paste("'", na.strings[1], "'", sep=""), if(locked) " LOCKED "))
     }
   }
-  dbGetQuery(conn, paste("select count(*) from", tablename))
+  dbGetQuery(conn, paste("SELECT COUNT(*) FROM", tablename))[[1]]
 }
 
