@@ -52,8 +52,7 @@ Ready.
 [1] TRUE
 [1] TRUE
 [1] TRUE
-   L1
-1 150
+[1] 150
 [1] TRUE
 [1] TRUE
 [1] TRUE
